<resources>
    <string name="app_name">AccidentReport</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="surnames">Surnames</string>
    <string name="dni">DNI</string>
    <string name="phone">Phone</string>
    <string name="myProfile">MyProfile</string>
    <string name="shutdown">Shutdown</string>
    <string name="newReport">New report</string>
    <string name="myReports">My reports</string>
    <string name="myLastReport">My last reports</string>
    <string name="location">Location</string>
    <string name="locationButton">Get my location</string>
    <string name="clearLocationButton">Clear location</string>
    <string name="locationButtonPERMISO">Location PERMISO</string>
    <string name="carA">Car A</string>
    <string name="carB">Car B</string>
    <string name="owner_car_name">Owner name</string>
    <string name="owner_car_surnanames">Owner surnames</string>
    <string name="owner_car_phone">Ouwen phone</string>
    <string name="owner_car_dni">Owner dni</string>
    <string name="car_registration">Car registration</string>
    <string name="accident_reason">Accident reason</string>
    <string name="accident_location">Accident location</string>
    <string name="accident_photo">Accident photo</string>
    <string name="accident_report_id">Accident report ID</string>
    <string name="take_photo">Take a photo</string>
</resources>
