<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="top|center_horizontal"
        android:hint="@string/username"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20dp"
        android:padding="10dp" />


    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="top|center_horizontal"
        android:hint="@string/password"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="20dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8dp"
        android:text="@string/login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="8dp"
        android:text="@string/register"
        android:textSize="20sp" />


</LinearLayout>